reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_all_primitive_type_fields-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "bool": {
        "description": "Boolean value",
        "type": "boolean"
      },
      "char": {
        "description": "Unicode character",
        "type": "string"
      },
      "f32": {
        "description": "32-bit floating point number",
        "type": "number"
      },
      "f64": {
        "description": "64-bit floating point number",
        "type": "number"
      },
      "i128": {
        "description": "128-bit signed integer",
        "type": "integer"
      },
      "i16": {
        "description": "16-bit signed integer",
        "type": "integer"
      },
      "i32": {
        "description": "32-bit signed integer",
        "type": "integer"
      },
      "i64": {
        "description": "64-bit signed integer",
        "type": "integer"
      },
      "i8": {
        "description": "8-bit signed integer",
        "type": "integer"
      },
      "isize": {
        "description": "Machine-specific-bit signed integer",
        "type": "integer"
      },
      "reflectapi.Infallible": {
        "description": "Error object which is expected to be never returned",
        "type": "object",
        "title": "reflectapi.Infallible",
        "properties": {}
      },
      "reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields",
        "required": [
          "_f_array",
          "_f_bool",
          "_f_char",
          "_f_f32",
          "_f_f64",
          "_f_hashmap",
          "_f_hashset",
          "_f_i128",
          "_f_i16",
          "_f_i32",
          "_f_i64",
          "_f_i8",
          "_f_infallible",
          "_f_isize",
          "_f_option",
          "_f_phantomdata",
          "_f_pointer_arc",
          "_f_pointer_box",
          "_f_pointer_cell",
          "_f_pointer_mutex",
          "_f_pointer_refcell",
          "_f_pointer_rwlock",
          "_f_pointer_weak",
          "_f_str",
          "_f_tuple",
          "_f_tuple10",
          "_f_tuple11",
          "_f_tuple12",
          "_f_tuple3",
          "_f_tuple4",
          "_f_tuple5",
          "_f_tuple6",
          "_f_tuple7",
          "_f_tuple8",
          "_f_tuple9",
          "_f_u128",
          "_f_u16",
          "_f_u32",
          "_f_u64",
          "_f_u8",
          "_f_unit",
          "_f_usize",
          "_f_vec"
        ],
        "properties": {
          "_f_array": {
            "description": "Fixed-size Array",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/u8"
            }
          },
          "_f_bool": {
            "$ref": "#/components/schemas/bool"
          },
          "_f_char": {
            "$ref": "#/components/schemas/char"
          },
          "_f_f32": {
            "$ref": "#/components/schemas/f32"
          },
          "_f_f64": {
            "$ref": "#/components/schemas/f64"
          },
          "_f_hashmap": {
            "description": "Key-value map type",
            "type": "object",
            "additionalProperties": {
              "$ref": "#/components/schemas/std.string.String"
            }
          },
          "_f_hashset": {
            "description": "Value set type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/u8"
            },
            "uniqueItems": true
          },
          "_f_i128": {
            "$ref": "#/components/schemas/i128"
          },
          "_f_i16": {
            "$ref": "#/components/schemas/i16"
          },
          "_f_i32": {
            "$ref": "#/components/schemas/i32"
          },
          "_f_i64": {
            "$ref": "#/components/schemas/i64"
          },
          "_f_i8": {
            "$ref": "#/components/schemas/i8"
          },
          "_f_infallible": {
            "$ref": "#/components/schemas/reflectapi.Infallible"
          },
          "_f_isize": {
            "$ref": "#/components/schemas/isize"
          },
          "_f_option": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "_f_phantomdata": {
            "description": "Zero-sized phantom data",
            "type": "null"
          },
          "_f_pointer_arc": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_pointer_box": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_pointer_cell": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_pointer_mutex": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_pointer_refcell": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_pointer_rwlock": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_pointer_weak": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_str": {
            "$ref": "#/components/schemas/std.string.String"
          },
          "_f_tuple": {
            "description": "Tuple holding 2 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "_f_tuple10": {
            "description": "Tuple holding 10 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "_f_tuple11": {
            "description": "Tuple holding 11 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "_f_tuple12": {
            "description": "Tuple holding 12 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "_f_tuple3": {
            "description": "Tuple holding 3 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "_f_tuple4": {
            "description": "Tuple holding 4 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "_f_tuple5": {
            "description": "Tuple holding 5 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "_f_tuple6": {
            "description": "Tuple holding 6 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "_f_tuple7": {
            "description": "Tuple holding 7 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "_f_tuple8": {
            "description": "Tuple holding 8 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "_f_tuple9": {
            "description": "Tuple holding 9 elements",
            "type": "array",
            "prefixItems": [
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              },
              {
                "$ref": "#/components/schemas/u8"
              }
            ]
          },
          "_f_u128": {
            "$ref": "#/components/schemas/u128"
          },
          "_f_u16": {
            "$ref": "#/components/schemas/u16"
          },
          "_f_u32": {
            "$ref": "#/components/schemas/u32"
          },
          "_f_u64": {
            "$ref": "#/components/schemas/u64"
          },
          "_f_u8": {
            "$ref": "#/components/schemas/u8"
          },
          "_f_unit": {
            "$ref": "#/components/schemas/std.tuple.Tuple0"
          },
          "_f_usize": {
            "$ref": "#/components/schemas/usize"
          },
          "_f_vec": {
            "description": "Expandable array type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/u8"
            }
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "std.tuple.Tuple0": {
        "description": "Unit type",
        "type": "null"
      },
      "u128": {
        "description": "128-bit unsigned integer",
        "type": "integer"
      },
      "u16": {
        "description": "16-bit unsigned integer",
        "type": "integer"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      },
      "u64": {
        "description": "64-bit unsigned integer",
        "type": "integer"
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      },
      "usize": {
        "description": "Machine-specific-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
