reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_all_primitive_type_fields-5.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_python_code :: < TestStructWithAllPrimitiveTypeFields > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsBasicTestStructWithAllPrimitiveTypeFields(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    f_u8: int = Field(serialization_alias="_f_u8", validation_alias="_f_u8")
    f_u16: int = Field(serialization_alias="_f_u16", validation_alias="_f_u16")
    f_u32: int = Field(serialization_alias="_f_u32", validation_alias="_f_u32")
    f_u64: int = Field(serialization_alias="_f_u64", validation_alias="_f_u64")
    f_u128: U128 = Field(serialization_alias="_f_u128", validation_alias="_f_u128")
    f_usize: int = Field(serialization_alias="_f_usize", validation_alias="_f_usize")
    f_i8: int = Field(serialization_alias="_f_i8", validation_alias="_f_i8")
    f_i16: int = Field(serialization_alias="_f_i16", validation_alias="_f_i16")
    f_i32: int = Field(serialization_alias="_f_i32", validation_alias="_f_i32")
    f_i64: int = Field(serialization_alias="_f_i64", validation_alias="_f_i64")
    f_i128: I128 = Field(serialization_alias="_f_i128", validation_alias="_f_i128")
    f_isize: int = Field(serialization_alias="_f_isize", validation_alias="_f_isize")
    f_f32: float = Field(serialization_alias="_f_f32", validation_alias="_f_f32")
    f_f64: float = Field(serialization_alias="_f_f64", validation_alias="_f_f64")
    f_bool: bool = Field(serialization_alias="_f_bool", validation_alias="_f_bool")
    f_char: Char = Field(serialization_alias="_f_char", validation_alias="_f_char")
    f_str: str = Field(serialization_alias="_f_str", validation_alias="_f_str")
    f_unit: None = Field(serialization_alias="_f_unit", validation_alias="_f_unit")
    f_option: int | None = Field(
        default=None, serialization_alias="_f_option", validation_alias="_f_option"
    )
    f_vec: list[int] = Field(serialization_alias="_f_vec", validation_alias="_f_vec")
    f_hashmap: dict[int, str] = Field(
        serialization_alias="_f_hashmap", validation_alias="_f_hashmap"
    )
    f_hashset: list[int] = Field(
        serialization_alias="_f_hashset", validation_alias="_f_hashset"
    )
    f_tuple: tuple[int, str] = Field(
        serialization_alias="_f_tuple", validation_alias="_f_tuple"
    )
    f_tuple3: tuple[int, str, int] = Field(
        serialization_alias="_f_tuple3", validation_alias="_f_tuple3"
    )
    f_tuple4: tuple[int, str, int, str] = Field(
        serialization_alias="_f_tuple4", validation_alias="_f_tuple4"
    )
    f_tuple5: tuple[int, str, int, str, int] = Field(
        serialization_alias="_f_tuple5", validation_alias="_f_tuple5"
    )
    f_tuple6: tuple[int, str, int, str, int, str] = Field(
        serialization_alias="_f_tuple6", validation_alias="_f_tuple6"
    )
    f_tuple7: tuple[int, str, int, str, int, str, int] = Field(
        serialization_alias="_f_tuple7", validation_alias="_f_tuple7"
    )
    f_tuple8: tuple[int, str, int, str, int, str, int, str] = Field(
        serialization_alias="_f_tuple8", validation_alias="_f_tuple8"
    )
    f_tuple9: tuple[int, str, int, str, int, str, int, str, int] = Field(
        serialization_alias="_f_tuple9", validation_alias="_f_tuple9"
    )
    f_tuple10: tuple[int, str, int, str, int, str, int, str, int, str] = Field(
        serialization_alias="_f_tuple10", validation_alias="_f_tuple10"
    )
    f_tuple11: tuple[int, str, int, str, int, str, int, str, int, str, int] = Field(
        serialization_alias="_f_tuple11", validation_alias="_f_tuple11"
    )
    f_tuple12: tuple[int, str, int, str, int, str, int, str, int, str, int, str] = (
        Field(serialization_alias="_f_tuple12", validation_alias="_f_tuple12")
    )
    f_array: list[int] = Field(
        serialization_alias="_f_array", validation_alias="_f_array"
    )
    f_pointer_box: int = Field(
        serialization_alias="_f_pointer_box", validation_alias="_f_pointer_box"
    )
    f_pointer_arc: int = Field(
        serialization_alias="_f_pointer_arc", validation_alias="_f_pointer_arc"
    )
    f_pointer_cell: int = Field(
        serialization_alias="_f_pointer_cell", validation_alias="_f_pointer_cell"
    )
    f_pointer_refcell: int = Field(
        serialization_alias="_f_pointer_refcell", validation_alias="_f_pointer_refcell"
    )
    f_pointer_mutex: int = Field(
        serialization_alias="_f_pointer_mutex", validation_alias="_f_pointer_mutex"
    )
    f_pointer_rwlock: int = Field(
        serialization_alias="_f_pointer_rwlock", validation_alias="_f_pointer_rwlock"
    )
    f_pointer_weak: int = Field(
        serialization_alias="_f_pointer_weak", validation_alias="_f_pointer_weak"
    )
    f_infallible: ReflectapiInfallible = Field(
        serialization_alias="_f_infallible", validation_alias="_f_infallible"
    )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class basic:
            """Namespace for basic types."""

            TestStructWithAllPrimitiveTypeFields = (
                ReflectapiDemoTestsBasicTestStructWithAllPrimitiveTypeFields
            )


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields
        ] = None,
    ) -> ApiResponse[reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields]: Response containing reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields
        ] = None,
    ) -> ApiResponse[reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields]: Response containing reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.basic.TestStructWithAllPrimitiveTypeFields,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsBasicTestStructWithAllPrimitiveTypeFields,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
