reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_hashmap-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithHashMap"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithHashMap"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.TestStructWithHashMap": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithHashMap",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "description": "Key-value map type",
            "type": "object",
            "additionalProperties": {
              "$ref": "#/components/schemas/std.string.String"
            }
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
